2007-04-07 Harald Hanche-Olsen <hanche@math.ntnu.no>

	* slime.el (sldb-mode-map): Added key definition for follow-link.

2007-04-08  Marco Baringer <mb@bese.it>

	* swank.lisp (fuzzy-completion-set): Use two check-type forms
	instead of a place like (values limit time-limit-in-msec). While
	sbcl seems to accept this form openmcl doesn't and it's not clear
	from the spec that this is allowed.

2007-04-06  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp: Making fuzzy completion regard the time limit
	correctly. Also make it properly use microseconds as time
	granularity and inform the Emacs side if the time limit has
	exhausted. Additionally, over all minor and cosmetic changes:

	(fuzzy-completions, fuzzy-completion-set): Returns now
	additionally a flag indicating whether the time limit has
	exhausted under the hood. Accomodated docstring accordingly.

	(fuzzy-create-completion-set): Changed to correctly catch and
	propagate the remaining time limit to the actual match functions,
	and return once time limit has exhausted. Some aesthetical code 
	reorganization.

	(get-real-time-in-msecs): New function. 

	(fuzzy-find-matching-symbols, fuzzy-find-matching-packages):
	Correctly regard the time limit. Use new function
	GET-REAL-TIME-IN-MSECS for that purpose. Return the remaining
	time limit as second value.

	* slime.el (slime-fuzzy-complete-symbol): Accomodated to deal with
	the additionally returned flag of SWANK:FUZZY-COMPLETIONS. Pass
	the flag by.
	(slime-fuzzy-choices-buffer): Pass interruption flag by.
	(slime-fuzzy-fill-completions-buffer): If time limit has exhausted
	during completion retrieval, show an informational indication as
	last entry in *Fuzzy Completion*.
	(slime-fuzzy-last): New variable. To hold the last real completion
	choice previous to the (possible) Time Limit Exhausted information.
	(slime-fuzzy-next): Accomodated to not go beneath SLIME-FUZZY-LAST.
	
2007-04-06  Tobias C. Rittweiler <tcr@freebits.de>
